--- a/templates/header.html
+++ b/templates/header.html
@@ -5,36 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <title>JaD Library</title>
+
+    <!--Uso de Favicon-->
+    <link rel="icon" type="image/png" href="uploads/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="uploads/favicon-16x16.png" sizes="16x16" />
+
+    <title>Sistema libros</title>
 </head>
 
 <body>
-    <div class="container-fluid bg-light">
-        <div class="row">
-            <div class="col-md">
-                <header class="py-3">
-                    <img class="img-fluid" src="/img/Koala.jpg" alt="" width="400px" height="10px">
-                    <h3 class="text-center">JAD On-linebrary</h3>
-                </header>
-            </div>
-        </div>
-    </div>
-    <!-- Punto 20 de la guia - Revisar porque lo hice sola -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light text-center">
-        <a class="navbar-brand text-center">Gestion de libros</a>
-        <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-        <div id="my-nav" class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{url_for('index')}}">Libros<span class="sr-only">(current)</span></a>
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <!--<a class="nav-link active" href="#">Active</a>-->
+            <a href="{{url_for('index')}}" class="navbar-left"><img src="/uploads/logo.png"></a>
+        </li>
+    </ul>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link h3" href="{{url_for( 'index')}} ">Libros<span class="sr-only ">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Otro item</a>
+                    <a class="nav-link h3" href="{{url_for( 'create')}} " tabindex="-1 " aria-disabled="true">Alta libro</a>
                 </li>
             </ul>
+            <form class="form-inline my-2 my-lg-0 ">
+                <!-- TO-DO: Armar la busqueda con comportamiento-->
+                <input class="form-control mr-sm-2 " type="search " placeholder="Buscar " aria-label="Buscar ">
+                <button class="btn btn-outline-success my-2 my-sm-0 " type="submit ">Buscar</button>
+            </form>
         </div>
     </nav>
 
-    <div class="container">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
+    <div class="container ">
